# ROS2_FollowBot

./: .gitmodules  README.md
.github/workflows/: ci.yml  navigation2_minimal.repos  test.yml
Documentation/: ROS2_Important_Commands.md  ROS2_VSCodeDev.md
FollowBotAROS2/: .gitignore  .gitmodules  .swp  navigation2_minimal.repos  rosdep.yaml
FollowBotAROS2/src/: Session.vim
FollowBotAROS2/src/arduino_serial/: CMakeLists.txt  package.xml  q
FollowBotAROS2/src/arduino_serial/install/: local_setup.sh  setup.sh
FollowBotAROS2/src/arduino_serial/launch/: serial_composed.launch.py
FollowBotAROS2/src/arduino_serial/log/: latest_build
FollowBotAROS2/src/arduino_serial/src/: .cmd_vel_serial_node.cpp.swo  .cmd_vel_serial_node.cpp.swp  .imu_serial_node.cpp.swo  arduino_serial_node.cpp  cmd_vel_serial_node.cpp  encoder_serial_node.cpp  goal_serial_node.cpp  gps_serial_node.cpp  imu_serial_node.cpp  serial_manager_node.cpp
FollowBotAROS2/src/arduino_serial/src/imu_filter/: MadgwickAHRS.h
FollowBotAROS2/src/arduino_serial/src/include/: serial_manager.hpp
FollowBotAROS2/src/bluetooth_connection/: CMakeLists.txt  package.xml
FollowBotAROS2/src/bluetooth_connection/src/: bluetooth_gps_node.cpp
FollowBotAROS2/src/following_mechanics/: CMakeLists.txt  package.xml
FollowBotAROS2/src/install/: local_setup.sh  setup.sh
FollowBotAROS2/src/install/arduino_serial/lib/arduino_serial/: arduino_serial_node
FollowBotAROS2/src/install/arduino_serial/share/arduino_serial/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
FollowBotAROS2/src/install/mapping/share/mapping/: package.sh
FollowBotAROS2/src/log/: latest_build
FollowBotAROS2/src/mapping/: CMakeLists.txt  package.xml
FollowBotAROS2/src/mapping/config/: dual_ekf_navsat_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml
FollowBotAROS2/src/mapping/followbot_nodes/: gps_navigation_node.cpp  mapping_node.cpp  odometry_node.cpp
FollowBotAROS2/src/mapping/install/: local_setup.sh  setup.sh
FollowBotAROS2/src/mapping/install/mapping/share/mapping/: local_setup.sh  package.sh
FollowBotAROS2/src/mapping/install/mapping/share/mapping/launch/: followbot_launch.py
FollowBotAROS2/src/mapping/launch/: demo.launch.py  dual_ekf_navsat.launch.py  dual_ekf_navsat_launch.py  followbot_launch.py  followbot_launch_nav2.py  test_followbot.launch.py
FollowBotAROS2/src/mapping/log/: latest_build
FollowBotAROS2/src/mapping/rviz2/: navigation.rviz
FollowBotAROS2/src/mapping/urdf/: followbot.urdf.xacro
FollowBotAROS2/src/mapping/worlds/: blank_world.sdf  obstacles1.sdf  obstacles2.world
FollowBotAROS2/src/my_package/: package.xml  setup.py
FollowBotAROS2/src/path_making/: package.xml  setup.py
FollowBotAROS2/src/path_making/path_making/: nav_through_poses.py  robot_navigator.py
